--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseUrl = "https://anotherlusitano.github.io/"
-title = "cd $HOME"
+title = "AnotherLusitano"
 theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
